--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
   <head>
     <title>GO FOR A GOOGLE</title>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-104391465-1', 'auto');
+    ga('send', 'pageview');
+
+    </script>
   </head>
   <body style="font-size:40px; width:100%;padding-top:350px; text-align:center">
     "GO FOR A GOOGLE"
