--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     "GO FOR A GOOGLE"
     <br/>
     - Evan Spiegel, 8/10/17
+    <br/><br/>
+    <form method="get" action="https://www.google.com/search">
+      <input type="text" name="q" size="31" value="">
+    </form>
   </body>
 </html>
 
