--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     - Evan Spiegel, 8/10/17
     <br/><br/>
     <form method="get" action="https://www.google.com/search">
-      <input type="text" name="q" size="31" value="">
+      <input type="text" name="q" size="31" value="" placeholder="E.g. Growth Hacking...">
+      <input type="submit" name="submit" value="Let's Go">
     </form>
   </body>
 </html>
