--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <br/><br/>
     <form method="get" action="https://www.google.com/search">
       <input type="text" name="q" size="31" value="" placeholder="E.g. Growth Hacking...">
-      <input type="submit" name="submit" value="Let's Go">
+      <input type="submit" name="submit" value="WTF is it?">
     </form>
   </body>
 </html>
